--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -24,6 +24,15 @@
     </div>
   </section>
 
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-49731788-1', 'krisslee.no');
+    ga('send', 'pageview');
+  </script>
+
   <script src="js/vendor/promise-0.1.1.min.js"></script>
   <script src="js/vendor/d3.v2.js"></script>
   <script src="js/vendor/d3.layout.min.js"></script>
