--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,8 +4,9 @@
 <head>
   <title>KostLee</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/rickshaw.min.css">
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/vendor/bootstrap-3.1.1.css">
+  <link rel="stylesheet" href="css/vendor/morris-0.4.3.min.css">
   <link rel="stylesheet" href="css/kostlee.css">
 </head>
 
@@ -25,12 +26,10 @@
     </div>
   </section>
   <section class="container cf">
-    <h2>Antall givere over tid</h2>
-    <div id="graph-numberOfPeople" class="graph"></div>
-  </section>
-  <section class="container cf">
-    <h2>Grasrotandel over tid</h2>
-    <div id="graph-amountOfMoney" class="graph"></div>
+    <h2>Historikk</h2>
+    <div class="row">
+      <div id="graph-historic" class="col-xs-12 graph"></div>
+    </div>
   </section>
 
   <script>
@@ -41,11 +40,10 @@
     ga('create', 'UA-49731788-1', 'krisslee.no');
     ga('send', 'pageview');
   </script>
-
+  <script src="js/vendor/jquery-2.1.0.min.js"></script>
+  <script src="js/vendor/raphael-2.1.2.min.js"></script>
+  <script src="js/vendor/morris-0.5.0.min.js"></script>
   <script src="js/vendor/promise-0.1.1.min.js"></script>
-  <script src="js/vendor/d3.v2.js"></script>
-  <script src="js/vendor/d3.layout.min.js"></script>
-  <script src="js/vendor/rickshaw.min.js"></script>
   <script src="js/xhr_utils.js"></script>
 
   <script src="js/kostlee.js"></script>
