Start on per-weekday graph

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -26,6 +26,12 @@
     </div>
   </section>
   <section class="container cf">
+    <h2>Inntjening per ukedag</h2>
+    <div class="row">
+      <div id="graph-dayOfWeek" class="col-xs-12 graph"></div>
+    </div>
+  </section>
+  <section class="container cf">
     <h2>Historikk</h2>
     <div class="row">
       <div id="graph-historic" class="col-xs-12 graph"></div>
