Add some <meta> to make FB and Google happy

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,8 +3,19 @@
 
 <head>
   <title>KostLee</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="description" content="Innsamlede midler for KrissLee Festivalen">
+  <meta property="og:title" content="KostLee">
+  <meta property="og:description" content="Innsamlede midler for KrissLee Festivalen">
+  <meta property="og:image" content="http://kostlee.krisslee.no/gfx/kostlee.png">
+
+  <link rel="apple-touch-icon-precomposed" href="gfx/apple-touch-icon-precomposed.png">
   <link rel="stylesheet" href="css/vendor/bootstrap-3.1.1.css">
   <link rel="stylesheet" href="css/vendor/morris-0.4.3.min.css">
   <link rel="stylesheet" href="css/kostlee.css">
