--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -38,7 +38,7 @@
     </div>
   </section>
   <section class="container cf">
-    <h2>Inntjening per ukedag</h2>
+    <h2>Spill per ukedag</h2>
     <div class="row">
       <div id="graph-dayOfWeek" class="col-xs-12 graph"></div>
     </div>
@@ -49,6 +49,18 @@
       <div id="graph-historic" class="col-xs-12 graph"></div>
     </div>
   </section>
+  <footer class="container cf">
+    <div class="row">
+      <div class="col-xs-6">
+        <strong>&copy; 2014 <a href="http://www.krisslee.no">KrissLee Festivalen</a></strong>
+      </div>
+      <div class="col-xs-6 text-right">
+        <a href="https://github.com/ruudud/kostlee">
+          <img src="gfx/github.png" height="16" width="16">
+        </a>
+      </div>
+    </div>
+  </footer>
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
