--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -37,8 +37,23 @@
       </article>
     </div>
   </section>
+  <section class="container-fluid cf bg-clouds">
+    <div class="ctaGasroot container">
+      <div class="row">
+        <div class="col-sm-6">
+          <h1 class="ctaHeading">Hjelp oss gratis,<br> gi <strong>5%</strong> av din spillinnsats til oss.</h1>
+        </div>
+        <div class="col-sm-6">
+          <ul class="ctaList">
+            <li class="h3">Oppgi <strong>KrissLee Festivalen</strong> hos din kommisjonær</li>
+            <li class="h3">SMS <strong>Grasrotandelen 913010779</strong> til <strong>2020</strong></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="container cf">
-    <h2>Spill per ukedag</h2>
+    <h2>Hvilken ukedag spilles det mest på?</h2>
     <div class="row">
       <div id="graph-dayOfWeek" class="col-xs-12 graph"></div>
     </div>
