--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -15,7 +15,7 @@
   <meta property="og:description" content="Innsamlede midler for KrissLee Festivalen">
   <meta property="og:image" content="http://kostlee.krisslee.no/gfx/kostlee.png">
 
-  <link rel="icon" type="image/png" href="gfx/apple-touch-icon-precomposed.png">
+  <link rel="icon" type="image/png" href="gfx/kostlee.png">
   <link rel="apple-touch-icon-precomposed" href="gfx/apple-touch-icon-precomposed.png">
   <link rel="stylesheet" href="css/vendor/bootstrap-3.1.1.css">
   <link rel="stylesheet" href="css/vendor/morris-0.4.3.min.css">
