--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -25,14 +25,18 @@
 <body>
   <section class="container cf">
     <div class="row">
-      <article id="summary-money" class="smallFact col-xs-12 col-sm-6 col-md-4 col-md-offset-2">
-        <span class="fact"></span>
+      <article id="summary-money" class="simpleFact col-xs-12 col-sm-5 col-md-5 col-md-offset-1">
+        <div class="fact fact-small">
+          <h2></h2>
+        </div>
         <span class="factContent">
           <img class="icon-moneybag" src="gfx/moneybag.svg">
         </span>
       </article>
-      <article id="summary-people" class="smallFact col-xs-12 col-sm-6 col-md-4">
-        <span class="fact"></span>
+      <article id="summary-people" class="simpleFact col-xs-12 col-sm-7 col-md-5">
+        <div class="fact fact-small">
+          <h2></h2>
+        </div>
         <span class="factContent"></span>
       </article>
     </div>
@@ -41,7 +45,7 @@
     <div class="ctaGasroot container">
       <div class="row">
         <div class="col-sm-6">
-          <h1 class="ctaHeading">Hjelp oss gratis,<br> gi <strong>5%</strong> av din spillinnsats til oss.</h1>
+          <h1 class="ctaHeading">Hjelp oss gratis,<br> gi <strong>5 %</strong> av din spillinnsats til oss!</h1>
         </div>
         <div class="col-sm-6">
           <ul class="ctaList">
@@ -53,15 +57,35 @@
     </div>
   </section>
   <section class="container cf">
+    <div class="row">
+      <article class="simpleFact col-xs-12 col-sm-5 col-md-5 col-md-offset-1">
+        <div class="fact fact-medium">
+          <h2><span id="avgPerDay"></span><br><small>Gjennomsnitt per dag</small></h2>
+        </div>
+        <span class="factContent">
+          <img class="icon-moneybag" src="gfx/avg.svg">
+        </span>
+      </article>
+      <article class="simpleFact col-xs-12 col-sm-7 col-md-5">
+        <div class="fact fact-medium">
+          <h2><span id="avgPerPeople"></span><br><small>Gjennomsnitt per spiller</small></h2>
+        </div>
+        <span class="factContent">
+          <img class="icon-moneybag" src="gfx/avg.svg">
+        </span>
+      </article>
+    </div>
+  </section>
+  <section class="container cf">
     <h2>Hvilken ukedag spilles det mest på?</h2>
     <div class="row">
-      <div id="graph-dayOfWeek" class="col-xs-12 graph"></div>
+      <div id="graph-dayOfWeek" class="col-xs-12 col-md-6 graph"></div>
     </div>
   </section>
   <section class="container cf">
     <h2>Historikk</h2>
     <div class="row">
-      <div id="graph-historic" class="col-xs-12 graph"></div>
+      <div id="graph-historic" class="col-xs-12 col-md-6 graph"></div>
     </div>
   </section>
   <footer class="container cf">
