--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -23,6 +23,12 @@
 </head>
 
 <body>
+  <header class="container-fluid cf">
+    <div class="container page-header">
+      <img src="gfx/apple-touch-icon-precomposed.png" class="page-logo">
+      <h2 class="page-heading">Kostlee</h2>
+    </div>
+  </header>
   <section class="container cf">
     <div class="row">
       <article id="summary-money" class="simpleFact col-xs-12 col-sm-5 col-md-5 col-md-offset-1">
@@ -41,8 +47,8 @@
       </article>
     </div>
   </section>
-  <section class="container-fluid cf bg-clouds">
-    <div class="ctaGasroot container">
+  <section class="container-fluid bg-clouds">
+    <div class="ctaGasroot container cf">
       <div class="row">
         <div class="col-sm-6">
           <h1 class="ctaHeading">Hjelp oss gratis,<br> gi <strong>5 %</strong> av din spillinnsats til oss!</h1>
@@ -58,45 +64,46 @@
   </section>
   <section class="container cf">
     <div class="row">
-      <article class="simpleFact col-xs-12 col-sm-5 col-md-5 col-md-offset-1">
+      <article class="simpleFact col-xs-12 col-sm-6 col-md-5 col-md-offset-1">
         <div class="fact fact-medium">
           <h2><span id="avgPerDay"></span><br><small>Gjennomsnitt per dag</small></h2>
         </div>
         <span class="factContent">
-          <img class="icon-moneybag" src="gfx/avg.svg">
+          <img class="icon-avg" src="gfx/avg.svg">
         </span>
       </article>
-      <article class="simpleFact col-xs-12 col-sm-7 col-md-5">
+      <article class="simpleFact col-xs-12 col-sm-6 col-md-5">
         <div class="fact fact-medium">
           <h2><span id="avgPerPeople"></span><br><small>Gjennomsnitt per spiller</small></h2>
         </div>
         <span class="factContent">
-          <img class="icon-moneybag" src="gfx/avg.svg">
+          <img class="icon-avg" src="gfx/avg.svg">
         </span>
       </article>
     </div>
   </section>
   <section class="container cf">
-    <h2>Hvilken ukedag spilles det mest på?</h2>
     <div class="row">
-      <div id="graph-dayOfWeek" class="col-xs-12 col-md-6 graph"></div>
-    </div>
-  </section>
-  <section class="container cf">
-    <h2>Historikk</h2>
-    <div class="row">
-      <div id="graph-historic" class="col-xs-12 col-md-6 graph"></div>
+      <div class="col-xs-12 col-md-6 graph">
+        <h3 class="text-muted">Hvilken ukedag spilles det mest på?</h3>
+        <div id="graph-dayOfWeek"></div>
+      </div>
+      <div class="col-xs-12 col-md-6 graph">
+        <h3 class="text-muted">Historikk</h3>
+        <div id="graph-historic"></div>
+      </div>
     </div>
   </section>
   <footer class="container cf">
     <div class="row">
-      <div class="col-xs-8">
+      <div class="col-xs-7">
         <strong>&copy; 2014 <a href="http://www.krisslee.no">KrissLee Festivalen</a></strong>
       </div>
-      <div class="col-xs-4 text-right">
+      <div class="col-xs-5 text-right">
         <a href="https://github.com/ruudud/kostlee">
           <img src="gfx/github.png" height="16" width="16">
         </a>
+        <a href="https://github.com/ruudud/kostlee/blob/master/LICENSE">Fri kildekode</a>
       </div>
     </div>
   </footer>
