--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -31,9 +31,10 @@
   </header>
   <section class="container cf">
     <div class="row">
-      <article id="summary-money" class="simpleFact col-xs-12 col-sm-5 col-md-5 col-md-offset-1">
+      <article class="simpleFact col-xs-12 col-sm-5 col-md-5 col-md-offset-1">
         <div class="fact fact-small">
-          <h2></h2>
+          <h2><span id="summary-money"></span><br>
+          <small>Sum mottatt</small></h2>
         </div>
         <span class="factContent">
           <img class="icon-moneybag" src="gfx/moneybag.svg">
@@ -60,6 +61,26 @@
           </ul>
         </div>
       </div>
+    </div>
+  </section>
+  <section class="container cf">
+    <div class="row">
+      <article class="simpleFact col-xs-12 col-sm-6 col-md-5 col-md-offset-1">
+        <div class="fact fact-medium">
+          <h2><span id="maxPerDay"></span><br><small>Mest mottatt en dag</small></h2>
+        </div>
+        <span class="factContent">
+          <img class="icon-avg" src="gfx/max.svg">
+        </span>
+      </article>
+      <article class="simpleFact col-xs-12 col-sm-6 col-md-5">
+        <div class="fact fact-medium">
+          <h2><span id="maxPerPeople"></span><br><small>Mest per spiller én dag</small></h2>
+        </div>
+        <span class="factContent">
+          <img class="icon-avg" src="gfx/max.svg">
+        </span>
+      </article>
     </div>
   </section>
   <section class="container cf">
