--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -34,7 +34,7 @@
       <article class="simpleFact col-xs-12 col-sm-5 col-md-5 col-md-offset-1">
         <div class="fact fact-small">
           <h2><span id="summary-money"></span><br>
-          <small>Sum mottatt</small></h2>
+          <small>Mottatt hittil</small></h2>
         </div>
         <span class="factContent">
           <img class="icon-moneybag" src="gfx/moneybag.svg">
@@ -52,7 +52,7 @@
     <div class="ctaGasroot container cf">
       <div class="row">
         <div class="col-sm-6">
-          <h1 class="ctaHeading">Hjelp oss gratis,<br> gi <strong>5 %</strong> av din spillinnsats til oss!</h1>
+          <h1 class="ctaHeading">Hjelp oss gratis,<br> gi <strong>5 %</strong> av din spillinnsats!</h1>
         </div>
         <div class="col-sm-6">
           <ul class="ctaList">
@@ -67,7 +67,7 @@
     <div class="row">
       <article class="simpleFact col-xs-12 col-sm-6 col-md-5 col-md-offset-1">
         <div class="fact fact-medium">
-          <h2><span id="maxPerDay"></span><br><small>Mest mottatt en dag</small></h2>
+          <h2><span id="maxPerDay"></span><br><small>Mest mottatt én dag</small></h2>
         </div>
         <span class="factContent">
           <img class="icon-avg" src="gfx/max.svg">
