--- a/resources/index.html
+++ b/resources/index.html
@@ -124,7 +124,7 @@
       </div>
       <div class="col-xs-5 text-right">
         <a href="https://github.com/ruudud/kostlee">
-          <img src="gfx/github.png" height="16" width="16">
+          <img src="gfx/github.png" class="icon-github">
         </a>
         <a href="https://github.com/ruudud/kostlee/blob/master/LICENSE">Fri kildekode</a>
       </div>
